turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:5: error: ')' expected but double literal found.
		droite(360. ./ 7.)
                               ^